tests/positive/pr231_fixed_literal_for_of_sum.safe
-- Test: pr231_fixed_literal_for_of_sum
-- Description: Fixed-literal for-of accumulation proves through a same-type local copy.
-- Expected: ACCEPT

package pr231_fixed_literal_for_of_sum

   subtype tally is integer (0 to 20);
   subtype slot is integer (1 to 3);

   type fixed_window is array (slot) of tally;

   function collection_bonus returns tally
      fixed : fixed_window = (2, 4, 6);
      widened : fixed_window = fixed;
      total : tally = 0;

      for item of widened
         total = total + item;

      if total == 12
         return 1;

      return 0;
