tests/negative/neg_write_to_constant_index.safe
-- Test: neg_write_to_constant_index
-- Description: Writes through an indexed part rooted in a constant object must be rejected.
-- Expected: REJECT write_to_constant

package neg_write_to_constant_index

   subtype index is integer (1 to 3);
   type buffer is array (index) of integer;

   function make_buffer returns buffer
      result : buffer;

      for i in index
         result (i) = integer (i);

      return result;

   function run
      data : constant buffer = make_buffer;

      data (1) = 0;

